--- a/index.qmd
+++ b/index.qmd
@@ -39,5 +39,5 @@ Topic: dygraphs
 
 # References
 
-Documentation: [dygraphs](https://dygraphs.com/options.html)
+Documentation: [dygraphs](https://dygraphs.com/options.html)<br>
 Template used: [Template](https://github.com/nipunbatra/quarto-template)
