--- a/index.qmd
+++ b/index.qmd
@@ -39,5 +39,11 @@ Topic: dygraphs
 
 # References
 
+### dygraphs
+
 Documentation: [dygraphs](https://dygraphs.com/options.html)<br>
+
+### Website building
+
 Template used: [Template](https://github.com/nipunbatra/quarto-template)
+Tutorial playlist: [Playlist](https://www.youtube.com/playlist?list=PLftoLyLEwECBfia83pVwQCGX_Of3S5x-v)
