--- a/index.qmd
+++ b/index.qmd
@@ -32,12 +32,14 @@ There are multiple ways to include dygraphs in your project.
 
 ### Using a Content Delivery Network (CDN)
 
-A content delivery network (CDN) is a network of distributed servers that deliver web content (e.g., JavaScript, CSS etc.) from servers closest to the users, improving load speed and performance. CDNs help handle high traffic efficiently. UNPKG is a CDN that hosts dygraphs.
+A content delivery network (CDN) is a network of distributed servers that deliver web content (e.g., JavaScript, CSS etc.) from servers closest to the users, improving load speed and performance. CDNs help handle high traffic efficiently. [UNPKG](https://unpkg.com) is a CDN that hosts dygraphs.
 
 ```html
 <script type="text/javascript" src="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.css" />
 ```
+
+Include this code inside the ```html <head> ``` section of a HTML page to use dygraphs.
 
 ### Installing via npm
 
