--- a/index.qmd
+++ b/index.qmd
@@ -67,7 +67,7 @@ npm install dygraphs
 
 Website: [Website](https://dygraphs.com)<br>
 Documentation: [Dygraphs](https://dygraphs.com/options.html)<br>
-CDN: [UNPKG](https://unpkg.com)
+CDN: [UNPKG](https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.js)
 
 ## Website building
 
