--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,11 @@
 ---
 title: Dygraphs blog
+format:
+  html:
+    include-in-header:
+      - text: |
+          <script type="text/javascript" src="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.js"></script>
+          <link rel="stylesheet" type="text/css" href="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.css" />
 ---
 
 ---
