--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,9 @@
 ---
 title: "Dygraph blog"
-format:
-  html:
-    include-in-header:
-      - text: "<script type='text/javascript' src='https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.js'></script>
-               <link rel='stylesheet' type='text/css' href='https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.css' />"
+format: html
+include-in-header:
+  - text: "<script type='text/javascript' src='https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.js'></script>
+  - text: <link rel='stylesheet' type='text/css' href='https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.css' />"
 ---
 
 
