--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,8 @@
 ---
-title: "Dygraphs in Quarto"
+title: "Dygraphs Blog"
 format: html
 ---
 
-<!-- Load Dygraphs directly in the HTML section -->
 <script type="text/javascript" src="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.css" />
 
@@ -27,6 +26,7 @@ format: html
     });
   });
 </script>
+'''
 
 ---
 
