--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ format: html
 <script type="text/javascript" src="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.css" />
 
-```html
+```{=html}
 <div id="graphdiv" style="width: 600px; height: 300px;"></div>
 
 <script>
