--- a/index.qmd
+++ b/index.qmd
@@ -81,7 +81,7 @@ Once you have included Dygraphs into your project, you can use it directly.
 It is simple to create an interactive line chart with minimal code. Below is an example:
 
 ```html
-// Creating div, specifying width and height and ensuring it is centered
+<!-- Creating div, specifying width and height and ensuring it is centered -->
 <div id = "graphdiv" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
 
 <script>
@@ -138,6 +138,28 @@ Dygraphs makes it easy to zoom and pan across the timeline easily.
   </video>
 </div>
 
+## Adding multiple data series
+
+Dygraphs allows plotting of multiple series on the same graph for easy trend comparisons.
+
+<div id = "graphdiv" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    var data = "Date,Value\n" +
+               "2025-02-01,100\n" +
+               "2025-02-02,200\n" +
+               "2025-02-03,150\n" +
+               "2025-02-04,250\n";
+    
+    new Dygraph(document.getElementById("graphdiv"), data, {
+      title: 'Basic Line Chart',
+      xlabel: 'Date',
+      ylabel: 'Value',
+      legend: 'always'
+    });
+  });
+</script>
 
 ---
 
