--- a/index.qmd
+++ b/index.qmd
@@ -165,6 +165,9 @@ Dygraphs allows plotting of multiple series on the same graph for easy trend com
 </script>
 ```
 
+<script type="text/javascript" src="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://unpkg.com/dygraphs@2.2.1/dist/dygraph.min.css" />
+
 ```{=html}
 <div id = "graphdiv" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
 
