--- a/index.qmd
+++ b/index.qmd
@@ -216,6 +216,8 @@ Dygraphs allows user to highlight key data points using annotations.
       {
         series: "Temperature",
         x: "2025-02-02",
+        shortText: "A",
+        text: "Annotation",
       }
     ]);
   });
