--- a/index.qmd
+++ b/index.qmd
@@ -254,6 +254,62 @@ Dygraphs allows user to highlight key data points using annotations.
 </script>
 ```
 
+## Handling Large Datasets
+
+Dygraphs is optimized to handle millions of data points without lag.
+
+```html
+<div id = "graph4" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    let data = "Date,Value\n";
+    
+    // Generate 1000 random data points
+    for (let i = 0; i < 10000; i++) {
+      let date = new Date(2025, 0, i + 1).toISOString().split('T')[0];
+      data += `${date},${(Math.random() * 100).toFixed(2)}\n`;
+    }
+
+    new Dygraph(document.getElementById("graph4"), data, {
+      title: 'Large Dataset',
+      xlabel: 'Date',
+      ylabel: 'Random Values',
+      legend: 'always'
+      color: 'orange',
+    });
+  });
+</script>
+```
+
+```{=html}
+<div id = "graph4" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    let data = "Date,Value\n";
+    
+    // Generate 1000 random data points
+    for (let i = 0; i < 10000; i++) {
+      let date = new Date(2025, 0, i + 1).toISOString().split('T')[0];
+      data += `${date},${(Math.random() * 100).toFixed(2)}\n`;
+    }
+
+    new Dygraph(document.getElementById("graph4"), data, {
+      title: 'Large Dataset',
+      xlabel: 'Date',
+      ylabel: 'Random Values',
+      legend: 'always'
+      color: 'orange',
+    });
+  });
+</script>
+```
+
+## Real Time Updates
+
+## CSV and JSON Support
+
 ---
 
 # Use Cases {#use-cases}
