--- a/index.qmd
+++ b/index.qmd
@@ -304,42 +304,9 @@ Dygraphs is optimized to handle millions of data points without lag.
 </script>
 ```
 
-## Real Time Updates
-
-```{=html}
-<div id = "graph" style = "width: 800px; height: 400px; margin: auto; display: block;"></div>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    let data = [['Time', 'Value'], ['00:00:00', 0]]; 
-    const maxPoints = 100; 
-
-    function updateGraph() {
-      const now = new Date().toLocaleTimeString(); 
-      const value = (Math.random() * 100).toFixed(2); 
-      data.push([now, parseFloat(value)]);
-      if (data.length > maxPoints) data.shift(); 
-
-      g.updateOptions({ 'file': data });
-    }
-
-    let g = new Dygraph(document.getElementById("graph"), data, {
-      title: 'Real-time Data',
-      xlabel: 'Time',
-      ylabel: 'Value',
-      legend: 'always',
-      colors: ['blue'],
-      drawPoints: true,
-      strokeWidth: 1.5
-    });
-
-    setInterval(updateGraph, 2000);
-  });
-</script>
-```
-
-
 ## CSV and JSON Support
+
+Dygraphs can load data from CSV strings or JSON files.
 
 ---
 
