--- a/index.qmd
+++ b/index.qmd
@@ -329,7 +329,7 @@ To illustrate, we have stored the following data in a CSV and JSON file.
       .then(response => response.text())
       .then(csvData => {
         new Dygraph(document.getElementById("graph5"), csvData, {
-          title: 'CSV Data Graph',
+          title: 'CSV Graph',
           xlabel: 'Date',
           ylabel: 'Value',
           legend: 'always'
@@ -349,7 +349,7 @@ To illustrate, we have stored the following data in a CSV and JSON file.
       .then(response => response.text())
       .then(csvData => {
         new Dygraph(document.getElementById("graph5"), csvData, {
-          title: 'CSV Data Graph',
+          title: 'CSV Graph',
           xlabel: 'Date',
           ylabel: 'Value',
           legend: 'always'
@@ -370,13 +370,13 @@ To illustrate, we have stored the following data in a CSV and JSON file.
     fetch("https://raw.githubusercontent.com/sd-del/dygraphs/master/data.json")
       .then(response => response.json())
       .then(jsonData => {
-        let data = "Date,Value\n"; // Convert JSON to CSV format
+        let data = "Date,Value\n"; 
         jsonData.forEach(entry => {
           data += `${entry.Date},${entry.Value}\n`;
         });
 
         new Dygraph(document.getElementById("graph6"), data, {
-          title: 'JSON Data Graph',
+          title: 'JSON Graph',
           xlabel: 'Date',
           ylabel: 'Value',
           legend: 'always'
@@ -395,13 +395,13 @@ To illustrate, we have stored the following data in a CSV and JSON file.
     fetch("https://raw.githubusercontent.com/sd-del/dygraphs/master/data.json")
       .then(response => response.json())
       .then(jsonData => {
-        let data = "Date,Value\n"; // Convert JSON to CSV format
+        let data = "Date,Value\n"; 
         jsonData.forEach(entry => {
           data += `${entry.Date},${entry.Value}\n`;
         });
 
         new Dygraph(document.getElementById("graph6"), data, {
-          title: 'JSON Data Graph',
+          title: 'JSON Graph',
           xlabel: 'Date',
           ylabel: 'Value',
           legend: 'always'
